--- a/sync-image-example.yml
+++ b/sync-image-example.yml
@@ -15,7 +15,7 @@ on:
 # 工作流程任务（通常含有一个或多个步骤）
 jobs:
   syncimages:
-    runs-on: ubuntu-latest
+    runs-on: centos-latest
     steps:
     - name: Checkout Repos
       uses: actions/checkout@v3
@@ -26,12 +26,12 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2.2.0
       with:
-        registry: registry.cn-hangzhou.aliyuncs.com
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        registry: crpi-fgtmsnjs7i59gpf6.cn-hangzhou.personal.cr.aliyuncs.com
+        username: ${{ 2567873016@qq.com }}
+        password: ${{ Fuwei809539?? }}
         logout: false
         
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
         #!/usr/bin/env bash
-        skopeo copy docker://docker.io/rancher/fleet-agent:v0.9.5 docker://registry.cn-hangzhou.aliyuncs.com/rancher-images/fleet-agent:v0.9.5
+        skopeo copy docker://docker.io/rancher/fleet-agent:v0.9.5 docker://crpi-fgtmsnjs7i59gpf6.cn-hangzhou.personal.cr.aliyuncs.com/rancher-images/fleet-agent:v0.9.5
